added three sensors page and splash page

--- a/python/templates/base_template.html
+++ b/python/templates/base_template.html
@@ -68,6 +68,9 @@
             {% block body %}{% endblock %}
         </div>
     </div>
+    <div class="container small">
+        &copy; Copyright 2017 - 2023 dinogen@gmail.com &nbsp;<br>
+    </div>
 </body>
 
 </html>
