--- a/python/templates/splash_template.html
+++ b/python/templates/splash_template.html
@@ -1,5 +1,5 @@
 {% extends "base_template.html" %} {% block head %} {% endblock %} {% block body %}
-
+<div class="container">
 <img src="/static/box.jpg" alt="">
-
+</div>
 {% endblock %}
